# nanomosaic

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: common.rs  image.rs  main.rs  message.rs
src/common/: draw.rs  image.rs  logger.rs  mod.rs  panic.rs  threads.rs
src/composite/: mod.rs
src/gui/: components.rs  file_dialogs.rs  mod.rs  pixbuf.rs  window.rs
src/logic/: mod.rs  state.rs  thread.rs
