[package]
name = "nanomosaic"
edition = "2018"
version = "1.0.0"
authors = ["Viktor Chvatal"]
license = "MIT"

[dependencies]
image = { version = "0.23", default-features = false, features = ["png", "jpeg"]}
nanocv = { git = "https://github.com/viktorchvatal/nanocv" }

gtk="*"
gdk = "*"
gdk-pixbuf = "*"
gio = "*"
glib = "0.7.1"
simplelog = "0.5.3"
log = "0.4.6"
itertools = "0.8.0"
backtrace = "0.3.30"

[profile.release]
opt-level = 3
lto = true